🐛 Fix : 프로필 이미지변경 오류 수정

--- a/assets/html/mypage.html
+++ b/assets/html/mypage.html
@@ -66,10 +66,10 @@
       <div id="user-profile" class="user-profile">
         <form class="profile-container">
           <div class="my_profile">
-            <input type="file" id="imageInput" accept="image/*" class="fileInput"/>
             <img id="my_img" class="my-profile-img" alt="profile"/>
             <div class="input-imgbtn">
-              <button id="attachImageButton">이미지 변경하기</button>
+              <input type="file" id="imageInput" accept="image/*" class="fileInput"/>
+              <label id="attachImageButton" for="imageInput">이미지 변경하기</label>
             </div>
           </div>
           <div class="user-info">
