--- a/assets/html/joongoReaders.html
+++ b/assets/html/joongoReaders.html
@@ -50,7 +50,7 @@
           </ul>
         </ul>
         <ul class="questions">
-          <a class="questions" href="../html/fan.html">F&A</a>
+          <a class="questions" href="../html/fna.html">F&A</a>
         </ul>
 
         </ul>
