--- a/assets/html/shop.html
+++ b/assets/html/shop.html
@@ -39,10 +39,10 @@
           <div class="buttons">
             <div class="filter-btn">
               <div class="filter-buttons">
-                <button><a href="#">전체</button>
-                <button><a href="#">판매중</button>
-                <button><a href="#">판매진행중</button>
-                <button><a href="#">판매완료</button>
+                <a class="filter-button filter-button-all" href="#">전체</a>
+                <a class="filter-button filter-button-sale" href="#">판매중</a>
+                <a class="filter-button filter-button-in-progress" href="#">판매진행중</a>
+                <a class="filter-button filter-button-sold-out" href="#">판매완료</a>
               </div>
               <div class="page_wrap">
                 <div class="page_nation">
