🎨 Style : section tag 추가

--- a/assets/html/login.html
+++ b/assets/html/login.html
@@ -33,27 +33,31 @@
         </div>
       </nav>
     </header>
-    <div class="login-container">
-      <h2>Login</h2>
-      <form>
-        <div class="form-group">
-          <ul>
-            <li>ID</li>
-            <li><input type="text" id="id" name="id" placeholder="  아이디" required></li>
-          </ul>
-          <ul>
-            <li>Password</li>
-            <li><input type="password" id="password" name="password" placeholder="  비밀번호" required></li>
-          </ul>
-          <button type="submit" class="btn-login">Login</button>
-          <div class="question">
-            <div class="question-sign">
-              <h4>아직 회원가입 전이신가요? <a href="../html/signup.html">  회원가입하기</a></h4>
-              <h4>비밀번호가 기억나지 않나요? <a href="../html/passwordSearch.html">비밀번호 찾기</a></h4>
+    <section>
+      <div class="login-container">
+        <h2>Login</h2>
+        <form>
+          <div class="form-group">
+            <ul>
+              <li>ID</li>
+              <li><input type="text" id="id" name="id" placeholder="  아이디" required></li>
+            </ul>
+            <ul>
+              <li>Password</li>
+              <li><input type="password" id="password" name="password" placeholder="  비밀번호" required></li>
+            </ul>
+            <button type="submit" class="btn-login">Login</button>
+            <div class="question">
+              <div class="question-sign">
+                <h4>아직 회원가입 전이신가요? <a href="../html/signup.html">  회원가입하기</a></h4>
+                <h4>비밀번호가 기억나지 않나요? <a href="../html/passwordSearch.html">비밀번호 찾기</a></h4>
+              </div>
             </div>
-        </div>
-          
-        </div>
+            
+          </div>
+        </form>
+      </div>
+    </section>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
