--- a/assets/html/signup.html
+++ b/assets/html/signup.html
@@ -33,36 +33,38 @@
         </div>
       </nav>
     </header>
-    <div class="signup-container">
-      <h2>Sign Up</h2>
-      <form class="signup">
-        <ul>
-          <li>ID</li>
-          <li><input type="text" id="id" name="id" placeholder="  아이디를 입력해주세요" required></li>
-        </ul>
-        <ul>
-          <li>Email</li>
-          <li><input type="email" id="email" name="email" placeholder="  이메일을 입력해주세요"required></li>
-        </ul>
-        <ul>
-          <li>닉네임</li>
-          <li><input type="text" id="user-nickname" name="user-nickname" placeholder="  닉네임을 입력해주세요." required></li>
-        </ul>
-        <ul>
-          <li>비밀번호</li>
-          <li><input type="password" id="password" name="password" placeholder="  비밀번호를 입력해주세요" required></li>
-        </ul>
-        <ul>
-          <li>비밀번호 확인</li>
-          <li><input type="password" id="confirm-password" name="confirm-password" placeholder="  비밀번호를 다시 입력해주세요"required></li>
-        </ul>
-          <button type="submit" class="join-button">가입하기</button>
-        <div class="question">
-          <div class="question-login">
-            <h4>이미 가입한 사용자이신가요? <a href="../html/login.html">  로그인하기</a></h4>
-        </div>
+    <section>
+      <div class="signup-container">
+        <h2>Sign Up</h2>
+        <form class="signup">
+          <ul>
+            <li>ID</li>
+            <li><input type="text" id="id" name="id" placeholder="  아이디를 입력해주세요" required></li>
+          </ul>
+          <ul>
+            <li>Email</li>
+            <li><input type="email" id="email" name="email" placeholder="  이메일을 입력해주세요"required></li>
+          </ul>
+          <ul>
+            <li>닉네임</li>
+            <li><input type="text" id="user-nickname" name="user-nickname" placeholder="  닉네임을 입력해주세요." required></li>
+          </ul>
+          <ul>
+            <li>비밀번호</li>
+            <li><input type="password" id="password" name="password" placeholder="  비밀번호를 입력해주세요" required></li>
+          </ul>
+          <ul>
+            <li>비밀번호 확인</li>
+            <li><input type="password" id="confirm-password" name="confirm-password" placeholder="  비밀번호를 다시 입력해주세요"required></li>
+          </ul>
+            <button type="submit" class="join-button">가입하기</button>
+          <div class="question">
+            <div class="question-login">
+              <h4>이미 가입한 사용자이신가요? <a href="../html/login.html">  로그인하기</a></h4>
+          </div>
+        </form>
       </div>
-    </form>
+    </section>
       
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
