--- a/assets/html/passwordSearch.html
+++ b/assets/html/passwordSearch.html
@@ -42,36 +42,38 @@
         </div>
       </nav>
     </header>
-    <div class="password-container">
-      <h2>비밀번호 찾기</h2>
-      <form id="input-id-form">
-        <div class="form-group">
-          <ul>
-            <li>아이디 입력</li>
-            <li>
-              <input type="text" id="ID" name="ID" placeholder="  아이디를 입력해주세요"/>
-            </li>
-            <button class="id-confirm-btn" id="confirm-button" type="button">확인</button>
-          </ul>
-        </div>
-      </form>
-    
-      <form id="password-change-form" style="display: none;">
-        <div class="form-group">
-          <ul>
-            <li>새 비밀번호</li>
-            <li><input type="password" id="new-password" placeholder="  새 비밀번호를 입력해주세요"></li>
-          </ul>
-          <ul>
-            <li>비밀번호 확인</li>
-            <li><input type="password" id="confirm-password" placeholder="  비밀번호를 다시 입력해주세요"></li>
-          </ul>
-          <ul>
-            <li><button class="confirm-button" id="change-password-button" type="button">비밀번호 변경</button></li>
-          </ul>
-        </div>
-      </form>
-    </div>
+    <section>
+      <div class="password-container">
+        <h2>비밀번호 찾기</h2>
+        <form id="input-id-form">
+          <div class="form-group">
+            <ul>
+              <li>아이디 입력</li>
+              <li>
+                <input type="text" id="ID" name="ID" placeholder="  아이디를 입력해주세요"/>
+              </li>
+              <button class="id-confirm-btn" id="confirm-button" type="button">확인</button>
+            </ul>
+          </div>
+        </form>
+      
+        <form id="password-change-form" style="display: none;">
+          <div class="form-group">
+            <ul>
+              <li>새 비밀번호</li>
+              <li><input type="password" id="new-password" placeholder="  새 비밀번호를 입력해주세요"></li>
+            </ul>
+            <ul>
+              <li>비밀번호 확인</li>
+              <li><input type="password" id="confirm-password" placeholder="  비밀번호를 다시 입력해주세요"></li>
+            </ul>
+            <ul>
+              <li><button class="confirm-button" id="change-password-button" type="button">비밀번호 변경</button></li>
+            </ul>
+          </div>
+        </form>
+      </div>
+    </section>
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
