--- a/assets/html/updatePost.html
+++ b/assets/html/updatePost.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/createPost.css" />
+    <link rel="stylesheet" href="../css/updatePost.css" />
     <title>Create Post</title>
   </head>
 
