--- a/assets/html/fna.html
+++ b/assets/html/fna.html
@@ -101,7 +101,7 @@
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
-    <script src="../js/authorized.js"></script>
+    <script type="module" src="../js/authorized.js"></script>
     <script src="../js/fna.js"></script>
   </body>
 </html>
