--- a/assets/html/aboutUs.html
+++ b/assets/html/aboutUs.html
@@ -30,6 +30,7 @@
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
               <li><a href="../html/recommend.html">Recommend</a></li>
+              <li><a href="../html/bookReviewList.html">Review</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
