--- a/assets/html/passwordSearch.html
+++ b/assets/html/passwordSearch.html
@@ -27,6 +27,7 @@
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
               <li><a href="../html/recommend.html">Recommend</a></li>
+              <li><a href="../html/bookReviewList.html">Review</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
             <ul class="dropdown-menu">
