--- a/assets/html/purchaseHistory.html
+++ b/assets/html/purchaseHistory.html
@@ -26,16 +26,8 @@
               <li><a href="/index.html">Home</a></li>
               <li><a href="../html/shop.html">Shop</a></li>
               <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chatlist.html">Chat</a></li>
-              <li><a href="../html/aboutUs.html">About Us</a></li>
-            </ul>
-            <ul class="dropdown-menu">
-              <li><a href="../html/login.html">Login</a></li>
-              <li><a href="../html/signup.html">Sign Up</a></li>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="../html/Shop.html">Shop</a></li>
-              <li><a href="../html/search.html">Search</a></li>
-              <li><a href="../html/chat.html">Chat</a></li>
+              <li><a href="../html/recommend.html">Recommend</a></li>
+              <li><a href="../html/bookReviewList.html">Review</a></li>
               <li><a href="../html/aboutUs.html">About Us</a></li>
             </ul>
           </div>
