✨ Feat : bookReviewDetail 화면 코드 작성 및 스타일 적용

--- a/assets/html/bookReviewDetail.html
+++ b/assets/html/bookReviewDetail.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/bookReviewDetail.css" />
     <title>메인 화면</title>
   </head>
 
@@ -35,12 +36,38 @@
     </header>
 
     <section>
-      
+      <div class="bookreview-title-content">
+        <h1>Review</h1>
+        <p>가장 기억에 남은 책에 대한 서평을 남겨주세요.</p>
+      </div>
+      <div class="bookreview-titlebox">
+        <div class="bookreview-title-info">
+
+        </div>
+        <div class="bookreview-content-btn">
+          <button>수정</button>
+          <button>삭제</button>
+        </div>
+      </div>
+      <div class="bookreview-content">
+        <div class="bookreview-hashtag">
+          <p><a href="#">#django</a></p>
+          <p><a href="#">#django</a></p>
+          <p><a href="#">#django</a></p>
+        </div>
+        <div class="bookreview-hashtag-info">
+          <p>▲ 위의 해시태그를 클릭하면 해당 키워드를 검색하여 관련 책을 찾아줍니다.</p>
+        </div>
+        <div class="bookreview-content-bookinfo">
+
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
       <p>&copy; 2023, joongo-readers. All rights reserved.</p>
     </footer>
     <script type="module" src="../js/authorized.js"></script>
+    <script type="module" src="../js/bookreviewdetail.js"></script>
   </body>
 </html>
