🐛 Fix : Unauthorized 상태일 때 createPost btn 수정

--- a/assets/html/shop.html
+++ b/assets/html/shop.html
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="create-btn">
-              <a class="update-btn" href="./createPost.html">상품 등록하기</a>
+              <a class="update-btn" href="#">상품 등록하기</a>
             </div>
             
             
