♻️ Refactor : 수정 삭제 버튼 id 추가

--- a/assets/html/bookReviewDetail.html
+++ b/assets/html/bookReviewDetail.html
@@ -45,15 +45,13 @@
 
         </div>
         <div class="bookreview-content-btn">
-          <button>수정</button>
-          <button>삭제</button>
+          <button id="bookreview-update-btn">수정</button>
+          <button id="bookreview-delete-btn">삭제</button>
         </div>
       </div>
       <div class="bookreview-content">
         <div class="bookreview-hashtag">
-          <p><a href="#">#django</a></p>
-          <p><a href="#">#django</a></p>
-          <p><a href="#">#django</a></p>
+          
         </div>
         <div class="bookreview-hashtag-info">
           <p>▲ 위의 해시태그를 클릭하면 해당 키워드를 검색하여 관련 책을 찾아줍니다.</p>
