--- a/assets/html/bookReviewDetail.html
+++ b/assets/html/bookReviewDetail.html
@@ -13,7 +13,7 @@
     <header class="navbar">
       <nav>
         <div class="nav-container">
-          <a href="../html/authenticationView.html">
+          <a href="/index.html">
             <img class="logo" src="../img/books.png" alt="logo" />
           </a>
           <div class="menu-container">
